--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
-.App {
-  text-align: center;
+
+.items {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1rem;
+}
+
+.nav-wrapper {
+  padding: 0 15px;
+}
+
+.filters__item:not(:last-child) {
+  margin-right: 1rem;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-info__type {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #333;
 }
