--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 
-.items {
+.goods {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1rem;
@@ -12,11 +12,13 @@
 .filters__item:not(:last-child) {
   margin-right: 1rem;
 }
-
-.card-content {
+.card {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.card-content {
+  flex-grow: 1;
 }
 
 .card-info {
@@ -25,8 +27,6 @@
   align-items: center;
 }
 
-.card-info__type {
-  font-size: 1.2rem;
-  font-weight: 600;
-  color: #333;
+.btn-big {
+  width: 100%;
 }
