--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,13 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  animation: show 500ms ease-in-out;
+  border-radius: 2px;
+}
+
+.basket-remove {
+  cursor: pointer;
 }
 
 .basket-close {
@@ -78,7 +85,28 @@
   .cart {
     bottom: 0;
   }
+  .basket-list {
+    max-width: 400px;
+  }
   .page-footer {
     background-color: #ccc;
   }
+}
+
+@media screen and (max-width: 480px) {
+  .basket-list {
+    max-width: 85%;
+    }
+  }
+
+
+@keyframes show {
+ from {
+   top: 70%;
+   opacity: 0;
+ }
+ to {
+   top: 50%;
+   opacity: 1;
+ }
 }
