--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,35 @@
   background-color: #000;
 }
 
+.toast {
+  position: absolute;
+  right: 0;
+  top: 90%;
+  z-index: 5;
+  background-color: yellow;
+  color: #333333;
+  animation: showToast 500ms ease-in-out;
+}
+
+
+@keyframes showToast {
+  from {
+    opacity: 0;
+    top: 10%;
+  }
+  to {
+    opacity: 1;
+    top: 80%;
+  }
+}
 @media screen and (max-width: 960px) {
   .page-footer {
     background-color: #ccc;
+  }
+  .toast {
+    top: 80%;
+    font-size: 14px;
+    max-width: 460px;
   }
 }
 
